# rag_performance_test

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/api/: SKILL.md
.claude/frontend/: SKILL.md
.claude/src/chunking/: SKILL.md
api/: main.py
api/routers/: pipeline.py  rag.py  upload.py  vectordb.py
api/services/: pipeline.py  session.py
config/: .env.example
frontend/: app.py
frontend/components/: api_client.py  result_table.py  step_card.py
frontend/pages/: pipeline.py  rag.py  upload.py  vectordb_search.py
ragsystem/chunking/: README.md  chunking_context.py  router.py
ragsystem/embedding/: README.md  __init__.py  embedding_context.py  router.py
ragsystem/rag/: __init__.py  rag_context.py
ragsystem/utils/: logger.py
ragsystem/vectordb/: README.md  __init__.py  router.py  vectordb_context.py
src/chunking/: README.md  __init__.py  chunking_context.py  router.py
src/embedding/: README.md  embedding_context.py  router.py
src/loading/: __init__.py
src/rag/: rag_context.py  state.py
src/test/: README.md  io_utils.py  test_chunking.py  test_embedding.py  test_pdf_loading.py  test_rag.py  test_vectordb.py
src/utils/: logger.py
src/vectordb/: README.md  router.py  vectordb_context.py
tests/: README.md  io_utils.py  test_chunking.py  test_embedding.py  test_pdf_loading.py  test_rag.py  test_vectordb.py
tests/output/: 00_auto_loading.json  01_auto_loading.json  04_loading.json  04_pymupdf_loading.json  04_recursive_chunking.json  04_recursive_chunking_openai_small_embedding.json
(+60 files in other folders)
